[gd_scene load_steps=28 format=3 uid="uid://bd5l1y3vdar0p"]

[ext_resource type="Script" path="res://script/miniGame/mini_game.gd" id="1_hqy1f"]
[ext_resource type="Texture2D" uid="uid://c43i5hrrhawi6" path="res://assets/backgrounds/background1.png" id="1_s52c5"]
[ext_resource type="Texture2D" uid="uid://dk8yspmeqggbm" path="res://assets/UI/button/stop_normal.png" id="2_n5nbm"]
[ext_resource type="Texture2D" uid="uid://sk6iax281aah" path="res://assets/backgrounds/background1Buttom.png" id="3_i7hem"]
[ext_resource type="Texture2D" uid="uid://btaq2lqnicsn" path="res://assets/UI/button/stop_press.png" id="3_plqxu"]
[ext_resource type="PackedScene" uid="uid://b4smae2p8wcx6" path="res://sence/miniGame/game1Tbale.tscn" id="3_prfoi"]
[ext_resource type="Script" path="res://script/fight/ui/stopButton.gd" id="4_41gix"]
[ext_resource type="PackedScene" uid="uid://ds30omdo3jq36" path="res://sence/miniGame/firework_table.tscn" id="4_ah3oi"]
[ext_resource type="PackedScene" uid="uid://bkq2jinug2gf7" path="res://sence/fight/ui/stopWindow.tscn" id="5_l03jy"]
[ext_resource type="Texture2D" uid="uid://bos5o3mfpwn0h" path="res://assets/miniGame/game1/creeper/creeper6.png" id="6_yd0s8"]
[ext_resource type="Texture2D" uid="uid://de3yjt8ks1xpo" path="res://assets/miniGame/game1/creeper/creeper7.png" id="7_ovhsm"]
[ext_resource type="Texture2D" uid="uid://caq6o2s1uewqb" path="res://assets/miniGame/game1/creeper/creeper8.png" id="8_xb76c"]
[ext_resource type="Texture2D" uid="uid://ckfag6m2jg6f1" path="res://assets/miniGame/game1/creeper/creeper1.png" id="9_7ly2s"]
[ext_resource type="Texture2D" uid="uid://ccbvlrlco4ffc" path="res://assets/miniGame/game1/creeper/creeper2.png" id="10_ewqdf"]
[ext_resource type="Texture2D" uid="uid://duhk4hs2mtjnq" path="res://assets/miniGame/game1/creeper/creeper3.png" id="11_j00er"]
[ext_resource type="Texture2D" uid="uid://fx4mhehdnc15" path="res://assets/miniGame/game1/creeper/creeper4.png" id="12_wsokj"]
[ext_resource type="Texture2D" uid="uid://dby22qk3728hy" path="res://assets/miniGame/game1/gunpowder/gunpowder3.png" id="12_yl4ls"]
[ext_resource type="Texture2D" uid="uid://btcsnqkuapbhm" path="res://assets/miniGame/game1/gunpowder/gunpowder2.png" id="13_3kh8k"]
[ext_resource type="Texture2D" uid="uid://cibbw5x1bo5te" path="res://assets/miniGame/game1/creeper/creeper5.png" id="13_oinab"]
[ext_resource type="Texture2D" uid="uid://7f4yf11eax14" path="res://assets/miniGame/game1/gunpowder/gunpowder1.png" id="14_i6vvu"]

[sub_resource type="SpriteFrames" id="SpriteFrames_k7cnu"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_yd0s8")
}, {
"duration": 1.0,
"texture": ExtResource("7_ovhsm")
}, {
"duration": 1.0,
"texture": ExtResource("8_xb76c")
}, {
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"creeperDeath",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_wsokj")
}, {
"duration": 1.0,
"texture": ExtResource("11_j00er")
}, {
"duration": 1.0,
"texture": ExtResource("10_ewqdf")
}, {
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"creeperOut",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_ewqdf")
}, {
"duration": 1.0,
"texture": ExtResource("11_j00er")
}, {
"duration": 1.0,
"texture": ExtResource("12_wsokj")
}, {
"duration": 1.0,
"texture": ExtResource("13_oinab")
}],
"loop": false,
"name": &"creeperShow",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"powderDeath",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_yl4ls")
}, {
"duration": 1.0,
"texture": ExtResource("13_3kh8k")
}, {
"duration": 1.0,
"texture": ExtResource("14_i6vvu")
}, {
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"powderOut",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_i6vvu")
}, {
"duration": 1.0,
"texture": ExtResource("13_3kh8k")
}, {
"duration": 1.0,
"texture": ExtResource("12_yl4ls")
}],
"loop": false,
"name": &"powderShow",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_mmtjn"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_yd0s8")
}, {
"duration": 1.0,
"texture": ExtResource("7_ovhsm")
}, {
"duration": 1.0,
"texture": ExtResource("8_xb76c")
}, {
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"creeperDeath",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_wsokj")
}, {
"duration": 1.0,
"texture": ExtResource("11_j00er")
}, {
"duration": 1.0,
"texture": ExtResource("10_ewqdf")
}, {
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"creeperOut",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_ewqdf")
}, {
"duration": 1.0,
"texture": ExtResource("11_j00er")
}, {
"duration": 1.0,
"texture": ExtResource("12_wsokj")
}, {
"duration": 1.0,
"texture": ExtResource("13_oinab")
}],
"loop": false,
"name": &"creeperShow",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"powderDeath",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_yl4ls")
}, {
"duration": 1.0,
"texture": ExtResource("13_3kh8k")
}, {
"duration": 1.0,
"texture": ExtResource("14_i6vvu")
}, {
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"powderOut",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_i6vvu")
}, {
"duration": 1.0,
"texture": ExtResource("13_3kh8k")
}, {
"duration": 1.0,
"texture": ExtResource("12_yl4ls")
}],
"loop": false,
"name": &"powderShow",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_oksc3"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_yd0s8")
}, {
"duration": 1.0,
"texture": ExtResource("7_ovhsm")
}, {
"duration": 1.0,
"texture": ExtResource("8_xb76c")
}, {
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"creeperDeath",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_wsokj")
}, {
"duration": 1.0,
"texture": ExtResource("11_j00er")
}, {
"duration": 1.0,
"texture": ExtResource("10_ewqdf")
}, {
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"creeperOut",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_ewqdf")
}, {
"duration": 1.0,
"texture": ExtResource("11_j00er")
}, {
"duration": 1.0,
"texture": ExtResource("12_wsokj")
}, {
"duration": 1.0,
"texture": ExtResource("13_oinab")
}],
"loop": false,
"name": &"creeperShow",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"powderDeath",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_yl4ls")
}, {
"duration": 1.0,
"texture": ExtResource("13_3kh8k")
}, {
"duration": 1.0,
"texture": ExtResource("14_i6vvu")
}, {
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"powderOut",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_i6vvu")
}, {
"duration": 1.0,
"texture": ExtResource("13_3kh8k")
}, {
"duration": 1.0,
"texture": ExtResource("12_yl4ls")
}],
"loop": false,
"name": &"powderShow",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_1ah5w"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_yd0s8")
}, {
"duration": 1.0,
"texture": ExtResource("7_ovhsm")
}, {
"duration": 1.0,
"texture": ExtResource("8_xb76c")
}, {
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"creeperDeath",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_wsokj")
}, {
"duration": 1.0,
"texture": ExtResource("11_j00er")
}, {
"duration": 1.0,
"texture": ExtResource("10_ewqdf")
}, {
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"creeperOut",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_ewqdf")
}, {
"duration": 1.0,
"texture": ExtResource("11_j00er")
}, {
"duration": 1.0,
"texture": ExtResource("12_wsokj")
}, {
"duration": 1.0,
"texture": ExtResource("13_oinab")
}],
"loop": false,
"name": &"creeperShow",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"powderDeath",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_yl4ls")
}, {
"duration": 1.0,
"texture": ExtResource("13_3kh8k")
}, {
"duration": 1.0,
"texture": ExtResource("14_i6vvu")
}, {
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"powderOut",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_i6vvu")
}, {
"duration": 1.0,
"texture": ExtResource("13_3kh8k")
}, {
"duration": 1.0,
"texture": ExtResource("12_yl4ls")
}],
"loop": false,
"name": &"powderShow",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_jyqfx"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_yd0s8")
}, {
"duration": 1.0,
"texture": ExtResource("7_ovhsm")
}, {
"duration": 1.0,
"texture": ExtResource("8_xb76c")
}, {
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"creeperDeath",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_wsokj")
}, {
"duration": 1.0,
"texture": ExtResource("11_j00er")
}, {
"duration": 1.0,
"texture": ExtResource("10_ewqdf")
}, {
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"creeperOut",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_ewqdf")
}, {
"duration": 1.0,
"texture": ExtResource("11_j00er")
}, {
"duration": 1.0,
"texture": ExtResource("12_wsokj")
}, {
"duration": 1.0,
"texture": ExtResource("13_oinab")
}],
"loop": false,
"name": &"creeperShow",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"powderDeath",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_yl4ls")
}, {
"duration": 1.0,
"texture": ExtResource("13_3kh8k")
}, {
"duration": 1.0,
"texture": ExtResource("14_i6vvu")
}, {
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"powderOut",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_i6vvu")
}, {
"duration": 1.0,
"texture": ExtResource("13_3kh8k")
}, {
"duration": 1.0,
"texture": ExtResource("12_yl4ls")
}],
"loop": false,
"name": &"powderShow",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_s2u4k"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_yd0s8")
}, {
"duration": 1.0,
"texture": ExtResource("7_ovhsm")
}, {
"duration": 1.0,
"texture": ExtResource("8_xb76c")
}, {
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"creeperDeath",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_wsokj")
}, {
"duration": 1.0,
"texture": ExtResource("11_j00er")
}, {
"duration": 1.0,
"texture": ExtResource("10_ewqdf")
}, {
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"creeperOut",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_ewqdf")
}, {
"duration": 1.0,
"texture": ExtResource("11_j00er")
}, {
"duration": 1.0,
"texture": ExtResource("12_wsokj")
}, {
"duration": 1.0,
"texture": ExtResource("13_oinab")
}],
"loop": false,
"name": &"creeperShow",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"powderDeath",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_yl4ls")
}, {
"duration": 1.0,
"texture": ExtResource("13_3kh8k")
}, {
"duration": 1.0,
"texture": ExtResource("14_i6vvu")
}, {
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"powderOut",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_i6vvu")
}, {
"duration": 1.0,
"texture": ExtResource("13_3kh8k")
}, {
"duration": 1.0,
"texture": ExtResource("12_yl4ls")
}],
"loop": false,
"name": &"powderShow",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_1emla"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_yd0s8")
}, {
"duration": 1.0,
"texture": ExtResource("7_ovhsm")
}, {
"duration": 1.0,
"texture": ExtResource("8_xb76c")
}, {
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"creeperDeath",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_wsokj")
}, {
"duration": 1.0,
"texture": ExtResource("11_j00er")
}, {
"duration": 1.0,
"texture": ExtResource("10_ewqdf")
}, {
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"creeperOut",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_ewqdf")
}, {
"duration": 1.0,
"texture": ExtResource("11_j00er")
}, {
"duration": 1.0,
"texture": ExtResource("12_wsokj")
}, {
"duration": 1.0,
"texture": ExtResource("13_oinab")
}],
"loop": false,
"name": &"creeperShow",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"powderDeath",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_yl4ls")
}, {
"duration": 1.0,
"texture": ExtResource("13_3kh8k")
}, {
"duration": 1.0,
"texture": ExtResource("14_i6vvu")
}, {
"duration": 1.0,
"texture": ExtResource("9_7ly2s")
}],
"loop": false,
"name": &"powderOut",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_i6vvu")
}, {
"duration": 1.0,
"texture": ExtResource("13_3kh8k")
}, {
"duration": 1.0,
"texture": ExtResource("12_yl4ls")
}],
"loop": false,
"name": &"powderShow",
"speed": 5.0
}]

[node name="MiniGame" type="Node2D"]
script = ExtResource("1_hqy1f")

[node name="backGround" type="TextureRect" parent="."]
texture = ExtResource("1_s52c5")
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer2"]
offset_top = 312.0
offset_right = 835.0
offset_bottom = 450.0
texture = ExtResource("3_i7hem")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2"]
offset_left = 6.0
offset_top = 348.0
offset_right = 68.0
offset_bottom = 404.0
theme_override_constants/separation = 4

[node name="HBoxContainer1" type="HBoxContainer" parent="CanvasLayer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Score" type="Label" parent="CanvasLayer2/VBoxContainer/HBoxContainer1"]
layout_mode = 2
text = "Score:"

[node name="ScoreVallue" type="Label" parent="CanvasLayer2/VBoxContainer/HBoxContainer1"]
layout_mode = 2
text = "1"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Time" type="Label" parent="CanvasLayer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Time:"

[node name="TimeValue" type="Label" parent="CanvasLayer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "1"

[node name="game1" type="Node2D" parent="."]

[node name="game1Tbale6" parent="game1" instance=ExtResource("3_prfoi")]
position = Vector2(237.5, 295)
sprite_frames = SubResource("SpriteFrames_k7cnu")

[node name="game1Tbale1" parent="game1" instance=ExtResource("3_prfoi")]
position = Vector2(297.5, 295)
sprite_frames = SubResource("SpriteFrames_mmtjn")

[node name="game1Tbale2" parent="game1" instance=ExtResource("3_prfoi")]
position = Vector2(357.5, 295)
sprite_frames = SubResource("SpriteFrames_oksc3")

[node name="game1Tbale3" parent="game1" instance=ExtResource("3_prfoi")]
position = Vector2(417.5, 295)
sprite_frames = SubResource("SpriteFrames_1ah5w")

[node name="game1Tbale4" parent="game1" instance=ExtResource("3_prfoi")]
position = Vector2(477.5, 295)
sprite_frames = SubResource("SpriteFrames_jyqfx")

[node name="game1Tbale5" parent="game1" instance=ExtResource("3_prfoi")]
position = Vector2(537.5, 295)
sprite_frames = SubResource("SpriteFrames_s2u4k")

[node name="game1Tbale7" parent="game1" instance=ExtResource("3_prfoi")]
position = Vector2(597.5, 295)
sprite_frames = SubResource("SpriteFrames_1emla")

[node name="game2" type="Node2D" parent="."]
visible = false

[node name="mobPoint1" type="Marker2D" parent="game2"]
position = Vector2(0, 40)

[node name="mobPoint2" type="Marker2D" parent="game2"]
position = Vector2(0, 70)

[node name="mobPoint3" type="Marker2D" parent="game2"]
position = Vector2(0, 100)

[node name="mobPoint4" type="Marker2D" parent="game2"]
position = Vector2(0, 150)

[node name="fireworkTable1" parent="game2" instance=ExtResource("4_ah3oi")]
position = Vector2(217.5, 293)

[node name="fireworkTable2" parent="game2" instance=ExtResource("4_ah3oi")]
position = Vector2(317.5, 293)

[node name="fireworkTable3" parent="game2" instance=ExtResource("4_ah3oi")]
position = Vector2(417.5, 293)

[node name="fireworkTable4" parent="game2" instance=ExtResource("4_ah3oi")]
position = Vector2(517.5, 293)

[node name="fireworkTable5" parent="game2" instance=ExtResource("4_ah3oi")]
position = Vector2(617.5, 293)

[node name="StopWindow" parent="." instance=ExtResource("5_l03jy")]
layer = 2
visible = false

[node name="overTimer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="StopButton" type="TextureButton" parent="CanvasLayer"]
offset_left = 767.0
offset_top = 21.0
offset_right = 787.0
offset_bottom = 41.0
texture_normal = ExtResource("2_n5nbm")
texture_pressed = ExtResource("3_plqxu")
texture_hover = ExtResource("3_plqxu")
script = ExtResource("4_41gix")

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="timeout" from="overTimer" to="." method="_on_over_timer_timeout"]
[connection signal="mouse_entered" from="CanvasLayer/StopButton" to="CanvasLayer/StopButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/StopButton" to="CanvasLayer/StopButton" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/StopButton" to="CanvasLayer/StopButton" method="_on_pressed"]
[connection signal="tree_entered" from="CanvasLayer/StopButton" to="CanvasLayer/StopButton" method="_on_tree_entered"]
